<resources>
    <string name="app_name">Programmer\'s Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="help_notation">
        Prefix:\n
        2 + 7 - 5 => - + 2 7 5\n
        2 + 7 / 5 => + 2 * 7 5\n
        Postfix:\n
        2 + 7 - 5 => 2 7 + 5 -\n
        2 + 7 / 5 => 2 7 5 / +
    </string>

    <string name="help_rules">
        1. Values being squarerooted in Infix Mode must be in parentheses\n
        2. Space must be used to separate operands in Prefix and Postfix Modes\n
        3. [R] in result means the result has values after the decimal and is not able to be converted to a non-Base10 format\n
        4. Division is valid in all bases until displaying the final result when using non-Base10\n
        5. Numbers are rounded to 7 decimal spaces in respect to Base10\n
        6. 4 ( 2 + 3 ) must be written\n
        as 4 * ( 2 + 3 )\n
        7. 2π and 2e must be written\n
        as 2 * π and 2 * e\n
        8. 4 + - 8 must be written\n
        as 4 + ( - 8 )
    </string>

    <string name="credits_members">
        <b>Lead Programmer</b>:\n
        Shebin Skaria\n
        <b>Team Captain</b>:\n
        Joey Hussain\n
        <b>Programmers</b>:\n
        Mhd Diaa Alnahhas\n
        Steven Guilbert
    </string>

    <string name="credits_info">
        This application was designed by the team of <b> One Triple Zero (OTZ)</b>.\n\n
        The primary goal of our application was to create a tool that could aid people learning computer systems.\n\n
        If you need any information on how to use the calculator. Please go to the help page in settings.

    </string>

    <string name="credits_themes">Themes/Logos designed on Canva</string>

    <!-- Nav Titles -->
    <string name="menu_home">Calculator</string>
    <string name="menu_notation">Notation</string>
    <string name="menu_base">Base</string>
    <string name="menu_history">History</string>
    <string name="menu_theme">Theme</string>

    <!-- Operand Buttons -->
    <string name='zero'>0</string>
    <string name='one'>1</string>
    <string name='two'>2</string>
    <string name='three'>3</string>
    <string name='four'>4</string>
    <string name='five'>5</string>
    <string name='six'>6</string>
    <string name='seven'>7</string>
    <string name='eight'>8</string>
    <string name='nine'>9</string>
    <string name='a'>a</string>
    <string name='b'>b</string>
    <string name='c'>c</string>
    <string name='d'>d</string>
    <string name='e'>e</string>
    <string name='f'>f</string>
    <string name='point'>.</string>

    <!-- Constants -->
    <string name='pi'>π</string>
    <string name='eConst'>e</string>

    <!-- Regular Operators -->
    <string name='exponent'>^</string>
    <string name='parentheses'>( )</string>
    <string name='modulo'>%</string>
    <string name='divide'>/</string>
    <string name='multiply'>*</string>
    <string name='add'>+</string>
    <string name='subtract'>-</string>
    <string name='squareroot'>√</string>

    <!-- Boolean Operators -->
    <string name='not'>NOT</string>
    <string name='and'>AND</string>
    <string name='or'>OR</string>
    <string name='xor'>XOR</string>
    <string name='nand'>NAND</string>
    <string name='nor'>NOR</string>
    <string name='xnor'>XNOR</string>

    <!-- Display Manipulator -->
    <string name='equals'>=</string>
    <string name='clear'>Clr</string>
    <string name='backspace'>Backspace</string>
    <string name='spacebar'>⎵</string>

    <string name='superT'>︽</string>

    <string name='display'>Enter in a value</string>
</resources>