<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.otz.calculator.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_notation"
            app:destination="@id/nav_notation" />
        <action
            android:id="@+id/action_nav_home_to_nav_base"
            app:destination="@id/nav_base" />
        <action
            android:id="@+id/action_nav_home_to_nav_history"
            app:destination="@id/nav_history" />
        <action
            android:id="@+id/action_nav_home_to_nav_theme"
            app:destination="@id/nav_theme" />
    </fragment>

    <fragment
        android:id="@+id/nav_notation"
        android:name="com.otz.calculator.ui.notation.NotationFragment"
        android:label="@string/menu_notation"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_notation_pop"
            app:popUpTo="@id/nav_notation"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_base"
        android:name="com.otz.calculator.ui.base.BaseFragment"
        android:label="@string/menu_base"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_base_pop"
            app:popUpTo="@id/nav_base"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_history"
        android:name="com.otz.calculator.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_nav_history_pop"
            app:popUpTo="@id/nav_history"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_theme"
        android:name="com.otz.calculator.ui.theme.ThemeFragment"
        android:label="@string/menu_theme"
        tools:layout="@layout/fragment_theme" >
        <action
            android:id="@+id/action_nav_theme_pop"
            app:popUpTo="@id/nav_theme"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>